# rightprice

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: test_deploy.yml
api/: index.html
changelog/: index.html
data/processed/: soi_min_route_duration.csv
docs/: api.md
notebooks/: 01-explore_citymapper_api.ipynb  02-explore_right_move.ipynb  03-analyse_right_move.Rmd
scripts/: 01-get_time_to_stations_of_interest.py  scrape_sold_houses_right_move.py
search/: search_index.json
src/rightprice/: __main__.py  add_one.py  error.py  scrape_rightmove.py  sold.py  sold_prices.py
tests/: conftest.py  test_add_one.py  test_sold.py  test_sold_prices.py
tests/fixtures/: postcode_page_1.html  postcode_radius_year_page_1.html  postcode_radius_year_page_2.html  sold_prices_page_1.html
