[project]
name = "rightprice"
version = "0.1.0"
description = "What is the right price for your property of interest?"
authors = [
    { name = "David Zhang" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "click==8.1.7",
    "pandas==2.2.3",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "pytest-cov==6.0.0",
]

docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.18",
    "mkdocstrings[python]==0.30.0",
]


build = [
    "build==1.3.0",
]



[project.scripts]
rightprice = "rightprice.__main__:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
